add intro paragraphs

--- a/pet-webpage.html
+++ b/pet-webpage.html
@@ -5,5 +5,14 @@
   </head>
   <body>
     <h1>All About Panthers</h1>
+    <p>A black panther is the melanistic color variant of any Panthera species. </p>
+    <p>It turns out many of us have even the most basic of panther facts wrong. We tend to assume that a panther is
+          an entirely separate species of big cat.</p>
+    <p>However, when we discuss panther facts, we usually actually meaneither jaguar or leopard facts, depending on the geographic location.<br />
+          This is because a panther is defined as a melanistic color variant of other species in the Panthera genus, which includes tigers, lions, jaguars and leopards.<br />
+          This color variant usually means that the cat is black or dark brown, since melanism is the development of melanin,
+          a dark-colored pigment in the skin.</p>
+    <p>Black panthers in Asia and Africa are leopards (Panthera pardus) and black panthers in the Americas are
+          black jaguars (Panthera onca). </p>
   </body>
 </html>
