add list of facts

--- a/pet-webpage.html
+++ b/pet-webpage.html
@@ -14,5 +14,15 @@
           a dark-colored pigment in the skin.</p>
     <p>Black panthers in Asia and Africa are leopards (Panthera pardus) and black panthers in the Americas are
           black jaguars (Panthera onca). </p>
+    <p>Fast facts about panthers:</p>
+    <ul>
+      <li>Class: Mammalia</li>
+      <li>Family: Felidae</li>
+      <li>Genus: Panthera</li>
+      <li>Habitat: Forests, swamplands, grasslands</li>
+      <li>Behavior: Solitary, nocturnal</li>
+      <li>Diet: Carnivorous. Prey includes deer, antelope, wild boar, rabbits</li>
+      <li>Life Span: 12-15 years</li>
+    </ul>
   </body>
 </html>
