put images in the image folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>All About Panthers</h1>
-    <img src="image1.jpg" alt="A photo of a Panther">
+    <img src="images/image1.jpg" alt="A photo of a Panther">
     <p>A black panther is the melanistic color variant of any Panthera species. </p>
     <p>It turns out many of us have even the most basic of panther facts wrong. We tend to assume that a panther is
           an entirely separate species of big cat.</p>
@@ -15,7 +15,7 @@
           a dark-colored pigment in the skin.</p>
     <p>Black panthers in Asia and Africa are leopards (Panthera pardus) and black panthers in the Americas are
           black jaguars (Panthera onca). </p>
-    <img src="image2.jpg" alt="A second photo of a Panther">
+    <img src="images/image2.jpg" alt="A second photo of a Panther">
     <p>Fast facts about panthers:</p>
     <ul>
       <li>Class: Mammalia</li>
